[TEMP]config: Add comment about version
Signed-off-by: Robbie Cao <robbie.cao@arm.com>

--- a/common/config/common_config.cfg
+++ b/common/config/common_config.cfg
@@ -45,8 +45,10 @@ EDK2_SRC_TAG=fff6d81270b57ee786ea18ad74f43149b9f03494
 LINARO_TOOLS_MAJOR_VERSION=7.5-2019.12
 LINARO_TOOLS_VERSION=7.5.0-2019.12
 
+# https://git.launchpad.net/~firmware-testing-team/fwts/+git/fwts
 #FWTS source tag from  https://git.launchpad.net/fwts
 FWTS_SRC_VERSION=v22.09.00
+# V22.09.00
 FWTS_SRC_TAG=330af50dbb33420188835e40a4873971dbeabbe0
 
 # EDK2-TEST source tag from  https://github.com/tianocore/edk2-test
@@ -55,18 +57,29 @@ SCT_SRC_TAG=8713740892bdb857e970a2841de9800b2c6b5552
 # GRUB2 source from https://github.com/rhboot/grub2.git
 GRUB_SRC_TAG=grub-2.06
 
+
+# https://github.com/ARM-software/bsa-acs.git
 ARM_BSA_VERSION=v1.0.4
 #Arm BSA source tag.
 #NOTE: If the value is NULL then the latest BSA source will be downloaded
+# v23.03_REL1.0.4
 ARM_BSA_TAG="ec8be39202e3433d58a76497c365758de1cd6d36"
+# v23.09_REL1.0.6
+#ARM_BSA_TAG="8c95a73fb988c61a299ad77f94dd55ca696efa43"
 
+# https://github.com/ARM-software/bbr-acs.git bbr-acs
 #Arm BBR source tag
 #NOTE: If the value is NULL then the latest BBR source will be downloaded
+# v23.03_IR_2.0.0
 ARM_BBR_TAG="e5759a3a7865d77ec8bba5d89cc3f6844cd89020"
 
+# https://git.gitlab.arm.com/linux-arm/linux-acs.git
 #Arm LINUX ACS source tag
 #NOTE: If the value is NULL then the latest Linux ACS source will be downloaded
+# v23.03_REL7.1.1_BETA-1
 ARM_LINUX_ACS_TAG="2f2b1c4536f0b27e3c4cf158e98f510ee0e610cd"
+# v23.09_SR_REL2.0.0_ES_REL1.3.0_IR_REL2.1.0
+#ARM_LINUX_ACS_TAG="9639c0d91e162c7c6bf2e1491055ea41b1ca8a7e"
 
 #Linux kernel version for Yocto build. Used only for the IR Band
 YOCTO_LINUX_KERNEL_VERSION=6.0
